--- a/app/src/main/res/layout/activity_innovation_score.xml
+++ b/app/src/main/res/layout/activity_innovation_score.xml
@@ -7,74 +7,24 @@
     android:orientation="vertical"
     tools:context=".moreFun.InnovationScoreActivity">
 
-    <RelativeLayout
-        android:id="@+id/more_innovation_head"
+    <include
+        android:id="@+id/func_base_constraintLayout"
+        layout="@layout/header_base"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/colorPrimary">
-
-        <ImageView
-            android:id="@+id/innovationScore_back"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:onClick="onClick"
-            android:src="@drawable/back"
-            app:tint="@color/app_white"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="50dp"
-            android:text="创新积分"
-            android:textColor="@color/app_white"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/innovationScore_state"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="160dp"
-            android:textColor="@color/app_white"
-            android:textSize="18sp" />
-
-    </RelativeLayout>
+        android:layout_height="45dp" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/innovation_waite"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <include
+            layout="@layout/more_func_loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.35"
-            app:srcCompat="@drawable/d_tongbu"
-            app:tint="@color/colorAccent"
-            tools:ignore="ContentDescription" />
-
-        <ProgressBar
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="200dp"
-            android:layout_height="20dp"
-            android:indeterminate="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2"
-            app:layout_constraintVertical_bias="0.05" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
