--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".moreFun.ExamActivity">
+    tools:context=".WebViewActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
