perf:登录页面进度条 perf:加载失败页面

--- a/app/src/main/res/layout/activity_average_teacher.xml
+++ b/app/src/main/res/layout/activity_average_teacher.xml
@@ -19,12 +19,23 @@
         android:layout_height="match_parent">
 
         <include
+            android:id="@+id/page_loading"
             layout="@layout/more_func_loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <include
+            android:id="@+id/page_fail"
+            layout="@layout/more_func_fail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
