--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -1,44 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".WebViewActivity">
 
-    <RelativeLayout
+    <include
+        android:id="@+id/func_base_constraintLayout"
+        layout="@layout/header_base"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/colorPrimary"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="109dp">
-
-        <ImageView
-            android:id="@+id/web_back"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:onClick="onClick"
-            android:src="@drawable/back"
-            app:tint="@color/app_white"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/web_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="50dp"
-            android:text=""
-            android:textColor="@color/app_white"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="@id/web_back"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </RelativeLayout>
+        android:layout_height="45dp" />
 
     <WebView
         android:id="@+id/webView"
