--- a/app/src/main/res/layout/detail_cardview.xml
+++ b/app/src/main/res/layout/detail_cardview.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -10,7 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp">
+        android:layout_marginEnd="8dp"
+        app:cardBackgroundColor="#C0ffffff"
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
