--- a/app/src/main/res/layout/fragement_preson.xml
+++ b/app/src/main/res/layout/fragement_preson.xml
@@ -6,11 +6,17 @@
     android:orientation="vertical"
     tools:context=".fragment.PersonFragment">
 
+    <View
+        android:id="@+id/add_status"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#902ABFFD" />
+
     <RelativeLayout
         android:id="@+id/more_head"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@color/colorPrimary"
+        android:background="#902ABFFD"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -57,7 +63,9 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?attr/selectableItemBackground"
-                app:cardCornerRadius="10dp">
+                app:cardCornerRadius="10dp"
+                app:cardBackgroundColor="#C0ffffff"
+                app:cardElevation="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -74,7 +82,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/app_white"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -233,7 +240,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/app_white"
+                android:background="#C0ffffff"
                 android:orientation="vertical">
 
                 <FrameLayout
@@ -486,7 +493,6 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:background="@color/app_white"
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp">
 
