--- a/app/src/main/res/layout/fragment_day_class.xml
+++ b/app/src/main/res/layout/fragment_day_class.xml
@@ -7,10 +7,17 @@
     android:orientation="vertical"
     tools:context=".fragment.DayClassFragment">
 
+    <View
+        android:id="@+id/add_status"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#902ABFFD" />
+
     <RelativeLayout
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@color/colorPrimary">
+        android:background="#902ABFFD">
 
         <TextView
             android:id="@+id/day_text"
@@ -49,7 +56,9 @@
             android:layout_marginTop="8dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="2dp"
-            app:cardCornerRadius="10dp">
+            app:cardCornerRadius="10dp"
+            app:cardBackgroundColor="#C0ffffff"
+            app:cardElevation="0dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
