--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -13,7 +13,7 @@
         android:background="#902ABFFD" />
 
     <RelativeLayout
-        android:id="@+id/more_head"
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="#902ABFFD">
