--- a/app/src/main/res/layout/fragment_base_func.xml
+++ b/app/src/main/res/layout/fragment_base_func.xml
@@ -13,6 +13,7 @@
         android:background="#902ABFFD" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="#902ABFFD">
