--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#2ABFFD</color>
     <color name="colorPrimaryDark">@color/colorPrimary</color>
+    <color name="colorPrimaryTransparent">#902ABFFD</color>
     <color name="colorAccent">#03DAC5</color>
 
     <color name="tab_checked">#2ABFFD</color>
