feat:课程详情页面自定义壁纸 perf:个性化设置布局

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="tab_unchecked">#757575</color>
 
     <color name="ic_launcher_background">#FFFFFF</color>
+    <color name="writeTransparent">#C0ffffff</color>
 
 </resources>
