--- a/app/src/main/res/layout/detail_cardview.xml
+++ b/app/src/main/res/layout/detail_cardview.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        app:cardBackgroundColor="#C0ffffff"
+        app:cardBackgroundColor="@color/writeTransparent"
         app:cardElevation="0dp">
 
         <LinearLayout
